# train-me-if-you-can

./: .env.example  pyproject.toml  test_config_fix.py  test_securegpt_direct.py  test_securegpt_lm.py
context_compression/context-compression-experiments/: .editorconfig  .env.template  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
context_compression/context-compression-experiments/data/gpt-4o/: _example-output.json  test-observation-002.json  test-observation-010.json
context_compression/context-compression-experiments/data/observations/: _example-observation.json  test-observation-002.json  test-observation-004.json
context_compression/context-compression-experiments/scripts/: MatchLines.py  dspy_gepa_optimizer.py  generate_coverage_image.py  generate_coverage_image_map.py  generate_coverage_image_map_base.py  test_latest_gepa_prompt.py  test_latest_textgrad_gepa_prompt.py  test_latest_textgrad_prompt.py  textgrad_latest_gepa_optimizer.py  textgrad_optimizer.py
context_compression/context-compression-experiments/src/context_compression_experiments/: __init__.py
dspy_pytorch/: tool_call_eval.py
dspy_securegpt/: README.md  SSL_FIX_SUMMARY.md  __init__.py  config.py  example_securegpt_dspy.py  securegpt_dspy_lm.py  securegpt_litellm.py  test_integration.py  test_simple.py
llmlingua/: 01_setup_llmlingua2.py  02_indomain_meetingbank.py  03_outdomain_singledoc_qa.py  04_outdomain_multidoc_qa.py  05_outdomain_summarization.py  06_outdomain_incontext_learning.py  README.md  config.py  run_all_examples.py
